@@ -2,8 +2,7 @@
 
 use strict;
 use warnings;
-use Test::Most tests => 193;
-use Test::NoWarnings;
+use Test::Most tests => 192;
 use File::Spec;
 use lib 't/lib';
 use MyLogger;
